<resources>
    <string name="app_name">CustomNavigationDrawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_account">Account</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_pass">Change Password</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="home_legs"><b>Legs</b> and</string>
    <string name="home_glutes"><b>Glutes</b> workout</string>
    <string name="home_advanced">Advanced</string>
    <string name="home_min">45 Min</string>
    <string name="home_start">Start Workout</string>

    <string name="home_today_activity">Today\'s Activity</string>
    <string name="home_daily_activity">Daily Activity</string>
    <string name="home_detail">Details</string>

    <string name="home_step">STEPS</string>
    <string name="home_calories">CALORIES</string>
    <string name="home_bpm">BPM</string>

    <string name="activity_walking">Walking</string>
    <string name="activity_tradmill">Tradmill</string>
    <string name="activity_running">Running</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_gym">Gym</string>
    <string name="activity_yoga">Yoga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>