<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/menuActivity"
            android:icon="@drawable/ic_activity"
            android:title="@string/menu_activity" />

        <item
            android:id="@+id/menuSetting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
    </group>
    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/menuProfile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />

            <item
                android:id="@+id/menuChangePass"
                android:icon="@drawable/ic_change_pass"
                android:title="@string/menu_change_pass"
                android:visible="false" />
        </menu>
    </item>

</menu>