<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:padding="20dp"
        tools:context=".fragment.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_view_head_home">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/img_head_home" />

                <LinearLayout
                    android:layout_width="wrap_content" 
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center|start"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_legs"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_glutes"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/home_advanced"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_advance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/home_min"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_button_conner_25dp"
                        android:padding="10dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/home_start"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_today_activity"
                        android:textStyle="bold" />

                    <TextView style="@style/TextViewDetailInHome" />

                </RelativeLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fillViewport="true"
                    android:measureAllChildren="false"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout style="@style/ToDayActivityLayout">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:text="@string/home_step"
                                app:drawableStartCompat="@drawable/ic_steps" />

                            <TextView
                                style="@style/TextViewBoldInHome"
                                android:text="1,228" />

                        </LinearLayout>

                        <LinearLayout style="@style/ToDayActivityLayout">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:text="@string/home_calories"
                                app:drawableStartCompat="@drawable/ic_calos" />

                            <TextView
                                style="@style/TextViewBoldInHome"
                                android:text="829" />

                        </LinearLayout>

                        <LinearLayout style="@style/ToDayActivityLayout">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:text="@string/home_bpm"
                                app:drawableStartCompat="@drawable/ic_bmp" />

                            <TextView
                                style="@style/TextViewBoldInHome"
                                android:text="1,228" />

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_daily_activity"
                        android:textStyle="bold" />

                    <TextView style="@style/TextViewDetailInHome" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
